# libsam

./: .gitmodules  README.md  clock.cpp  gpio.c  gpio.cpp  meson.build  meson_options.txt  newlib_syscalls.c  sercom_usart.cpp  serial_number.cpp
include/: tusb_config.h
include/sam/: _internal_get_sercom.h  adc.h  bod.h  clock.h  gpio.h  heap.h  pinmux.h  sercom_spi.h  sercom_usart.h  serial_number.h  tc.h  tcc.h
samd11_pack/gcc/gcc/: samd11c14a_flash.ld  samd11d14am_flash.ld  samd11d14as_flash.ld  samd11d14au_flash.ld  startup_samd11.c
samd21_pack/samd21a/gcc/gcc/: samd21e15a_flash.ld  samd21e16a_flash.ld  samd21e17a_flash.ld  samd21e18a_flash.ld  samd21g15a_flash.ld  samd21g16a_flash.ld  samd21g17a_flash.ld  samd21g17au_flash.ld  samd21g18a_flash.ld  samd21g18au_flash.ld  samd21j15a_flash.ld  samd21j16a_flash.ld  samd21j17a_flash.ld  samd21j18a_flash.ld  startup_samd21.c
samd21_pack/samd21b/gcc/gcc/: samd21e15bu_flash.ld  samd21e16bu_flash.ld
samd21_pack/samd21c/gcc/gcc/: samd21e15b_flash.ld  samd21e15cu_flash.ld  samd21e15l_flash.ld  samd21e16b_flash.ld  samd21e16cu_flash.ld  samd21e16l_flash.ld  samd21g15b_flash.ld  samd21g15l_flash.ld  samd21g16b_flash.ld  samd21g16l_flash.ld  samd21j15b_flash.ld  samd21j16b_flash.ld  startup_samd21.c
samd21_pack/samd21d/gcc/gcc/: samd21e17d_flash.ld  samd21e17du_flash.ld  samd21e17l_flash.ld  samd21g17d_flash.ld  samd21g17l_flash.ld  samd21j17d_flash.ld  startup_samd21.c
src/: adc.cpp  bod.cpp  clock.cpp  gpio.cpp  newlib_syscalls.c  newlib_syscalls.cpp  pinmux.cpp  sercom_spi.cpp  sercom_usart.cpp  serial_number.cpp  tc.cpp  tcc.cpp
